--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,4 +8,8 @@
 
 <ion-content padding>
 
+  <button ion-button block (click)="capture()">Capture</button>
+
+  <img [src]="imgCamera" alt="Captured Image" />
+
 </ion-content>
